--- a/pages/about.html
+++ b/pages/about.html
@@ -26,8 +26,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo+Narrow&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Be+Vietnam+Pro&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Tai+Viet&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700">
+    <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="../assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="../assets/css/Navbar-Right-Links-Dark-icons.css">
+    <link rel="stylesheet" href="../assets/css/Scroll-to-top-styles.css">
+    <link rel="stylesheet" href="../assets/css/Scroll-To-Top.css">
 </head>
 
 <body>
@@ -85,7 +89,7 @@
             </div>
         </div>
     </div>
-    <footer class="text-center py-4" onselectstart="return false">
+    <footer class="text-center py-4" id="footer">
         <div class="container">
             <div class="row row-cols-1 row-cols-lg-3">
                 <div class="col">
@@ -98,13 +102,14 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <p class="text-muted my-2">Copyright&nbsp;© 2023 Brand</p>
+                    <p class="text-muted my-2">© 2023 Raxyer Technologies</p>
                 </div>
             </div>
         </div>
-    </footer>
+    </footer><a id="scroll-to-top" title="Scroll to top" href="#"><i class="fas fa-angle-up"></i></a>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../assets/js/pagination.js"></script>
+    <script src="../assets/js/bs-init.js"></script>
+    <script src="../assets/js/Scroll-to-top-scroll-to-top.js"></script>
 </body>
 
 </html>
