--- a/pages/media.html
+++ b/pages/media.html
@@ -26,9 +26,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo+Narrow&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Be+Vietnam+Pro&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Tai+Viet&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700">
     <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="../assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="../assets/css/Navbar-Right-Links-Dark-icons.css">
+    <link rel="stylesheet" href="../assets/css/Scroll-to-top-styles.css">
+    <link rel="stylesheet" href="../assets/css/Scroll-To-Top.css">
 </head>
 
 <body>
@@ -56,8 +59,8 @@
                 <div class="col">
                     <div class="accordion" role="tablist" id="documents">
                         <div class="accordion-item" id="6A-ING-AI">
-                            <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#documents .item-1" aria-expanded="false" aria-controls="documents .item-1" style="font-size: 24px;">Grupo 6A-ING</button></h2>
-                            <div class="accordion-collapse collapse item-1" role="tabpanel">
+                            <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#documents .item-1" aria-expanded="true" aria-controls="documents .item-1" style="font-size: 24px;">Grupo 6A-ING</button></h2>
+                            <div class="accordion-collapse collapse show item-1" role="tabpanel">
                                 <div class="accordion-body">
                                     <div>
                                         <div class="row">
@@ -274,7 +277,7 @@
             </div>
         </div>
     </div>
-    <footer class="text-center py-4" onselectstart="return false">
+    <footer class="text-center py-4" id="footer">
         <div class="container">
             <div class="row row-cols-1 row-cols-lg-3">
                 <div class="col">
@@ -287,13 +290,14 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <p class="text-muted my-2">Copyright&nbsp;© 2023 Brand</p>
+                    <p class="text-muted my-2">© 2023 Raxyer Technologies</p>
                 </div>
             </div>
         </div>
-    </footer>
+    </footer><a id="scroll-to-top" title="Scroll to top" href="#"><i class="fas fa-angle-up"></i></a>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../assets/js/pagination.js"></script>
+    <script src="../assets/js/bs-init.js"></script>
+    <script src="../assets/js/Scroll-to-top-scroll-to-top.js"></script>
 </body>
 
 </html>
