--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Archivo+Narrow&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Be+Vietnam+Pro&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Tai+Viet&amp;display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">
     <link rel="stylesheet" href="assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="assets/css/Navbar-Right-Links-Dark-icons.css">
+    <link rel="stylesheet" href="assets/css/Scroll-to-top-styles.css">
+    <link rel="stylesheet" href="assets/css/Scroll-To-Top.css">
 </head>
 
 <body onselectstart="return false">
@@ -42,8 +47,46 @@
             </div>
         </div>
     </nav>
+    <div class="carousel slide" data-bs-ride="carousel" id="Initial-Carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="bg-light border rounded border-light" style="background-image: url(https://i.pinimg.com/originals/8e/61/ff/8e61ff28302b6fef1057d1b5afb52d3f.png);color: black;text-align: center;background-size: initial;background-position: center;padding-top: 150px;padding-bottom: 150px;margin-bottom: 0;">
+                    <h1>Ejemplo Introductorio</h1>
+                    <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+                    <p><a class="btn btn-light" role="button">Leer Más</a></p>
+                </div>
+            </div>
+        </div>
+        <div><a class="carousel-control-prev" href="#Initial-Carousel" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#Initial-Carousel" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+        <ol class="carousel-indicators">
+            <li data-bs-target="#Initial-Carousel" data-bs-slide-to="0" class="active"></li>
+        </ol>
+    </div>
     <div class="container" style="margin-top: 2.5em;">
         <div>
+            <div class="row">
+                <div class="col">
+                    <hr>
+                    <h1 style="text-align: center;margin-bottom: 20px;">Tabaquismo, alcoholismo y drogadicción</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div data-aos="fade-up" data-aos-once="true" style="align-content: center;justify-content: left;width: 100%;height: 100%;display: flex;"><img src="https://lh5.googleusercontent.com/-es0OM0i6Ryk/WR1_igODn6I/AAAAAAAARtw/JQwg972Xq5492-W-Udn9Ihe0TjQ-4qr1ACLIB/photo.jpg" style="width: 100%;height: 100%;"></div>
+                </div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-5 col-xxl-6">
+                    <div data-aos="fade-up" data-aos-once="true" style="justify-content: left;width: 100%;height: 100%;align-content: center;">
+                        <div style="width: 100%;text-align: start;"><span style="width: -1px;font-size: 32px;"><i class="far fa-hand-point-right" style="margin-right: 5px;"></i>Ejemplo característica</span>
+                            <p style="text-align: justify;font-size: 14px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae condimentum nibh, sit amet consectetur metus. Aenean tincidunt dolor tellus, ac scelerisque leo finibus ut. Suspendisse eget turpis consectetur, posuere quam a, interdum nisl. Nam porttitor sapien ex, eu faucibus neque dictum sit amet. Proin ex lectus, vestibulum et nibh vitae, ornare congue justo. Fusce in enim dictum, malesuada diam at, porttitor nunc. Aliquam venenatis est consectetur malesuada eleifend. Duis pellentesque justo nec lorem iaculis, vel ornare est facilisis. Maecenas imperdiet sodales enim ut vestibulum.</p>
+                        </div>
+                        <div style="width: 100%;text-align: start;">
+                            <hr><span style="width: 100%;font-size: 32px;"><i class="far fa-hand-point-right" style="margin-right: 5px;"></i>Ejemplo característica</span>
+                            <p style="text-align: justify;font-size: 14px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae condimentum nibh, sit amet consectetur metus. Aenean tincidunt dolor tellus, ac scelerisque leo finibus ut. Suspendisse eget turpis consectetur, posuere quam a, interdum nisl. Nam porttitor sapien ex, eu faucibus neque dictum sit amet. Proin ex lectus, vestibulum et nibh vitae, ornare congue justo. Fusce in enim dictum, malesuada diam at, porttitor nunc. Aliquam venenatis est consectetur malesuada eleifend. Duis pellentesque justo nec lorem iaculis, vel ornare est facilisis. Maecenas imperdiet sodales enim ut vestibulum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
             <div class="row">
                 <div class="col-md-4 col-lg-3 col-xxl-3">
                     <div>
@@ -82,6 +125,19 @@
                         <hr>
                         <div class="row">
                             <div class="col">
+                                <div class="carousel slide" data-bs-ride="false" id="carousel-1">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
+                                        <div class="carousel-item"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
+                                        <div class="carousel-item"><img class="w-100 d-block" src="https://cdn.bootstrapstudio.io/placeholders/1400x800.png" alt="Slide Image"></div>
+                                    </div>
+                                    <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
+                                    <ol class="carousel-indicators">
+                                        <li data-bs-target="#carousel-1" data-bs-slide-to="0" class="active"></li>
+                                        <li data-bs-target="#carousel-1" data-bs-slide-to="1"></li>
+                                        <li data-bs-target="#carousel-1" data-bs-slide-to="2"></li>
+                                    </ol>
+                                </div>
                                 <div class="card">
                                     <div class="card-body">
                                         <h4 class="card-title" style="text-align: center;">Acerca del proyecto</h4>
@@ -97,19 +153,19 @@
                 <div class="col-md-8 col-lg-9 col-xxl-9">
                     <div class="row">
                         <div class="col-xxl-12">
-                            <h1 style="font-size: 32px;text-align: center;margin-top: 30px;">Artículos Recientes</h1>
-                            <p style="text-align: center;">Listado de artículos</p>
+                            <h1 data-aos="fade-up" style="font-size: 32px;text-align: center;margin-top: 30px;">Artículos Recientes</h1>
+                            <p data-aos="fade-up" style="text-align: center;">Listado de artículos</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-6">
                             <div>
-                                <hr>
+                                <hr data-aos="fade-up">
                                 <div class="row">
                                     <div class="col">
                                         <div class="row">
                                             <div class="col">
-                                                <div class="card" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://saludconlupa.com/media/images/shutterstock_677417245.width-1920.jpg" style="height: 300px;">
+                                                <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://saludconlupa.com/media/images/shutterstock_677417245.width-1920.jpg" style="height: 300px;">
                                                     <div class="card-body"><a href="../tad/articles/examplearticle.html">
                                                             <h4>Ejemplo artículo 1</h4>
                                                         </a>
@@ -132,10 +188,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr>
+                                <hr data-aos="fade-up">
                                 <div class="row">
                                     <div class="col">
-                                        <div class="card" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://d31g6oeq0bzej7.cloudfront.net/Assets/image/jpeg/bbe23ecd-7923-4b6a-ac98-c2c97416fd58.jpg" style="height: 300px;">
+                                        <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://d31g6oeq0bzej7.cloudfront.net/Assets/image/jpeg/bbe23ecd-7923-4b6a-ac98-c2c97416fd58.jpg" style="height: 300px;">
                                             <div class="card-body"><a href="#">
                                                     <h4>Ejemplo artículo 2</h4>
                                                 </a>
@@ -156,10 +212,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr>
+                                <hr data-aos="fade-up">
                                 <div class="row">
                                     <div class="col">
-                                        <div class="card" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051647/6a42533407ec279798e116b20747221f-1000.jpg">
+                                        <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051647/6a42533407ec279798e116b20747221f-1000.jpg">
                                             <div class="card-body"><a href="#">
                                                     <h4>Ejemplo artículo 3</h4>
                                                 </a>
@@ -180,10 +236,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr>
+                                <hr data-aos="fade-up">
                                 <div class="row">
                                     <div class="col">
-                                        <div class="card" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051650/d10945d34bd8862cfbf0fe4c27e165fb-1000.jpg">
+                                        <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051650/d10945d34bd8862cfbf0fe4c27e165fb-1000.jpg">
                                             <div class="card-body"><a href="#">
                                                     <h4>Ejemplo artículo 4</h4>
                                                 </a>
@@ -208,10 +264,10 @@
                         </div>
                         <div class="col-md-12 col-lg-6 col-xl-6 col-xxl-6">
                             <div>
-                                <hr>
+                                <hr data-aos="fade-up">
                                 <div class="row">
                                     <div class="col-xl-12">
-                                        <div class="card" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.worldhistory.org/uploads/images/11260.png">
+                                        <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.worldhistory.org/uploads/images/11260.png">
                                             <div class="card-body"><a href="#">
                                                     <h4>Ejemplo artículo 5</h4>
                                                 </a>
@@ -232,10 +288,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr>
+                                <hr data-aos="fade-up">
                                 <div class="row">
                                     <div class="col">
-                                        <div class="card" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051650/d10945d34bd8862cfbf0fe4c27e165fb-1000.jpg">
+                                        <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051650/d10945d34bd8862cfbf0fe4c27e165fb-1000.jpg">
                                             <div class="card-body"><a href="#">
                                                     <h4>Ejemplo artículo 6</h4>
                                                 </a>
@@ -256,10 +312,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr>
+                                <hr data-aos="fade-up">
                                 <div class="row">
                                     <div class="col">
-                                        <div class="card" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://d31g6oeq0bzej7.cloudfront.net/Assets/image/jpeg/bbe23ecd-7923-4b6a-ac98-c2c97416fd58.jpg" style="height: 300px;">
+                                        <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://d31g6oeq0bzej7.cloudfront.net/Assets/image/jpeg/bbe23ecd-7923-4b6a-ac98-c2c97416fd58.jpg" style="height: 300px;">
                                             <div class="card-body"><a href="#">
                                                     <h4>Ejemplo artículo 7</h4>
                                                 </a>
@@ -280,12 +336,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <hr>
+                                <hr data-aos="fade-up">
                                 <div class="row">
                                     <div class="col">
                                         <div class="row">
                                             <div class="col">
-                                                <div class="card" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://saludconlupa.com/media/images/shutterstock_677417245.width-1920.jpg" style="height: 300px;">
+                                                <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://saludconlupa.com/media/images/shutterstock_677417245.width-1920.jpg" style="height: 300px;">
                                                     <div class="card-body"><a href="./articles/articletadenmss/articletadenmss.html">
                                                             <h4>Ejemplo artículo 8</h4>
                                                         </a>
@@ -328,13 +384,15 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <p class="text-muted my-2">Copyright&nbsp;© 2023 Brand</p>
+                    <p class="text-muted my-2">© 2023 Raxyer Technologies</p>
                 </div>
             </div>
         </div>
-    </footer>
+    </footer><a id="scroll-to-top" title="Scroll to top" href="#"><i class="fas fa-angle-up"></i></a>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/pagination.js"></script>
+    <script src="assets/js/aos.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="assets/js/Scroll-to-top-scroll-to-top.js"></script>
 </body>
 
 </html>
