--- a/index.html
+++ b/index.html
@@ -56,10 +56,26 @@
                     <p><a class="btn btn-light" role="button">Leer Más</a></p>
                 </div>
             </div>
+            <div class="carousel-item">
+                <div class="bg-light border rounded border-light" style="background-image: url(https://i.pinimg.com/originals/8e/61/ff/8e61ff28302b6fef1057d1b5afb52d3f.png);color: black;text-align: center;background-size: initial;background-position: center;padding-top: 150px;padding-bottom: 150px;margin-bottom: 0;">
+                    <h1>Ejemplo Introductorio</h1>
+                    <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+                    <p><a class="btn btn-light" role="button">Leer Más</a></p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="bg-light border rounded border-light" style="background-image: url(https://i.pinimg.com/originals/8e/61/ff/8e61ff28302b6fef1057d1b5afb52d3f.png);color: black;text-align: center;background-size: initial;background-position: center;padding-top: 150px;padding-bottom: 150px;margin-bottom: 0;">
+                    <h1>Ejemplo Introductorio</h1>
+                    <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+                    <p><a class="btn btn-light" role="button">Leer Más</a></p>
+                </div>
+            </div>
         </div>
         <div><a class="carousel-control-prev" href="#Initial-Carousel" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#Initial-Carousel" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
         <ol class="carousel-indicators">
             <li data-bs-target="#Initial-Carousel" data-bs-slide-to="0" class="active"></li>
+            <li data-bs-target="#Initial-Carousel" data-bs-slide-to="1"></li>
+            <li data-bs-target="#Initial-Carousel" data-bs-slide-to="2"></li>
         </ol>
     </div>
     <div class="container" style="margin-top: 2.5em;">
