--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <hr>
             <div class="row">
                 <div class="col-md-4 col-lg-3 col-xxl-3">
-                    <div>
+                    <div data-aos="fade-up" style="position: sticky;top: 50px;">
                         <div class="row">
                             <div class="col" style="margin-bottom: 0.3rem;">
                                 <h1 style="font-size: 24px;text-align: center;">Accesos rápidos</h1>
