--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body onselectstart="return false">
-    <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3">
+    <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3 sticky-top">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="../tad/index.html"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
