--- a/pages/media.html
+++ b/pages/media.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Tai+Viet&amp;display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700">
     <link rel="stylesheet" href="../assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="../assets/css/aos.min.css">
     <link rel="stylesheet" href="../assets/css/Articles-Cards-images.css">
     <link rel="stylesheet" href="../assets/css/Navbar-Right-Links-Dark-icons.css">
     <link rel="stylesheet" href="../assets/css/Scroll-to-top-styles.css">
@@ -35,13 +36,53 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="../"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3 sticky-top">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="../tad/index.html"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="../" style="font-size: 20px;">Artículos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/media.html" style="font-size: 20px;">Documentos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/about.html" style="font-size: 20px;">Acerca de nosotros</a></li>
+                    <li class="nav-item d-block d-xxl-none d-xl-none d-lg-none d-md-none" style="margin-top: 20px;">
+                        <p style="color: #ffffff;font-size: 24px;text-align: left;">Accesos de la página</p>
+                    </li>
+                    <li class="nav-item"><a class="nav-link active" href="../tad/index.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Artículos</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/media.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Documentos</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/about.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Acerca de nosotros</a></li>
+                </ul>
+                <ul class="navbar-nav d-xxl-none d-xl-none d-lg-none d-md-none">
+                    <li class="nav-item" style="margin-top: 20px;">
+                        <p style="color: #ffffff;font-size: 24px;text-align: left;">Accesos Rápidos</p>
+                    </li>
+                    <li class="nav-item">
+                        <div data-aos="fade-up">
+                            <div style="display: block;justify-content: center;margin-bottom: 10px;">
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="nav-item dropdown" style="text-align: left;font-size: 20px;"><a class="dropdown-toggle active" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="white-space: normal;text-align: center;">Efectos del tabaquismo y alcoholismo a través de la edad</a>
+                                            <div class="dropdown-menu dropdown-menu-dark shadow" style="width: 100%;float: left;text-align: center;"><a class="dropdown-item" href="../tad/articles/examplearticle.html">Artículo 1</a><a class="dropdown-item" href="#">Artículo 2</a><a class="dropdown-item" href="#">Artículo 3</a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div style="display: block;justify-content: center;margin-bottom: 10px;">
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="nav-item dropdown" style="text-align: left;"><a class="dropdown-toggle active" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="font-size: 20px;">La drogadicción a temprana edad</a>
+                                            <div class="dropdown-menu dropdown-menu-dark shadow" style="width: 100%;float: left;text-align: center;"><a class="dropdown-item" href="#">Artículo 1</a><a class="dropdown-item" href="#">Artículo 2</a><a class="dropdown-item" href="#">Artículo 3</a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div style="display: block;justify-content: center;">
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="nav-item dropdown" style="text-align: left;"><a class="dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="font-size: 20px;">La marihuana y sus efectos adversos</a>
+                                            <div class="dropdown-menu dropdown-menu-dark shadow" style="width: 100%;float: left;text-align: center;"><a class="dropdown-item" href="#">Artículo 1</a><a class="dropdown-item" href="#">Artículo 2</a><a class="dropdown-item" href="#">Artículo 3</a></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item"></li>
                 </ul>
             </div>
         </div>
@@ -296,6 +337,7 @@
         </div>
     </footer><a id="scroll-to-top" title="Scroll to top" href="#"><i class="fas fa-angle-up"></i></a>
     <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../assets/js/aos.min.js"></script>
     <script src="../assets/js/bs-init.js"></script>
     <script src="../assets/js/Scroll-to-top-scroll-to-top.js"></script>
 </body>
