--- a/pages/media.html
+++ b/pages/media.html
@@ -45,7 +45,7 @@
                     </li>
                     <li class="nav-item"><a class="nav-link active" href="../index.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Artículos</a></li>
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/media.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Documentos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/about.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Acerca de nosotros</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/about.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Acerca de nosotros</a></li>
                 </ul>
                 <ul class="navbar-nav d-xxl-none d-xl-none d-lg-none d-md-none">
                     <li class="nav-item" style="margin-top: 20px;">
@@ -57,7 +57,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <div class="nav-item dropdown" style="text-align: left;font-size: 20px;"><a class="dropdown-toggle active" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="white-space: normal;text-align: center;">Efectos del tabaquismo y alcoholismo a través de la edad</a>
-                                            <div class="dropdown-menu dropdown-menu-dark shadow" style="width: 100%;float: left;text-align: center;"><a class="dropdown-item" href="../tad/articles/examplearticle.html">Artículo 1</a><a class="dropdown-item" href="#">Artículo 2</a><a class="dropdown-item" href="#">Artículo 3</a></div>
+                                            <div class="dropdown-menu dropdown-menu-dark shadow" style="width: 100%;float: left;text-align: center;"><a class="dropdown-item" href="../articles/examplearticle.html">Artículo 1</a><a class="dropdown-item" href="#">Artículo 2</a><a class="dropdown-item" href="#">Artículo 3</a></div>
                                         </div>
                                     </div>
                                 </div>
