--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <p style="color: #ffffff;font-size: 24px;text-align: left;">Accesos de la página</p>
                     </li>
                     <li class="nav-item"><a class="nav-link active" href="../index.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Artículos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/media.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Documentos</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/media.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Documentos</a></li>
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/about.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Acerca de nosotros</a></li>
                 </ul>
                 <ul class="navbar-nav d-xxl-none d-xl-none d-lg-none d-md-none">
