--- a/pages/media.html
+++ b/pages/media.html
@@ -100,8 +100,8 @@
                 <div class="col">
                     <div class="accordion" role="tablist" id="documents">
                         <div class="accordion-item" id="6A-ING-AI">
-                            <h2 class="accordion-header" role="tab"><button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#documents .item-1" aria-expanded="true" aria-controls="documents .item-1" style="font-size: 24px;">Grupo 6A-ING</button></h2>
-                            <div class="accordion-collapse collapse show item-1" role="tabpanel">
+                            <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#documents .item-1" aria-expanded="false" aria-controls="documents .item-1" style="font-size: 24px;">Grupo 6A-ING</button></h2>
+                            <div class="accordion-collapse collapse item-1" role="tabpanel">
                                 <div class="accordion-body">
                                     <div>
                                         <div class="row">
