--- a/index.html
+++ b/index.html
@@ -36,46 +36,28 @@
 </head>
 
 <body onselectstart="return false">
-    <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3 sticky-top" style="height: 80px;">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="../tad/index.html"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TADENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3 sticky-top">
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="../index.html"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TAD ENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item d-block d-xxl-none d-xl-none d-lg-none d-md-none" style="margin-top: 20px;">
                         <p style="color: #ffffff;font-size: 24px;text-align: left;">Accesos de la página</p>
                     </li>
-                    <li class="nav-item"><a class="nav-link active" href="../tad/index.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Artículos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/media.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Documentos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/about.html" style="font-size: 20px;color: rgba(255,255,255,0.55);text-align: left;">Acerca de nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="../index.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Artículos</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/media.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Documentos</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/about.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Acerca de nosotros</a></li>
                 </ul>
                 <ul class="navbar-nav d-xxl-none d-xl-none d-lg-none d-md-none">
                     <li class="nav-item" style="margin-top: 20px;">
                         <p style="color: #ffffff;font-size: 24px;text-align: left;">Accesos Rápidos</p>
                     </li>
                     <li class="nav-item">
-                        <div data-aos="fade-up">
+                        <div>
                             <div style="display: block;justify-content: center;margin-bottom: 10px;">
                                 <div class="row">
                                     <div class="col">
-                                        <div class="nav-item dropdown" style="text-align: left;font-size: 20px;"><a class="dropdown-toggle active" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="white-space: normal;text-align: center;">Efectos del tabaquismo y alcoholismo a través de la edad</a>
+                                        <div class="nav-item dropdown" style="text-align: left;font-size: 20px;"><a class="dropdown-toggle active" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="white-space: normal;text-align: center;font-size: 22px;">Efectos del tabaquismo y alcoholismo a través de la edad</a>
                                             <div class="dropdown-menu dropdown-menu-dark shadow" style="width: 100%;float: left;text-align: center;"><a class="dropdown-item" href="../articles/examplearticle.html">Artículo 1</a><a class="dropdown-item" href="#">Artículo 2</a><a class="dropdown-item" href="#">Artículo 3</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div style="display: block;justify-content: center;margin-bottom: 10px;">
-                                <div class="row">
-                                    <div class="col">
-                                        <div class="nav-item dropdown" style="text-align: left;"><a class="dropdown-toggle active" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="font-size: 20px;">La drogadicción a temprana edad</a>
-                                            <div class="dropdown-menu dropdown-menu-dark shadow" style="width: 100%;float: left;text-align: center;"><a class="dropdown-item" href="#">Artículo 1</a><a class="dropdown-item" href="#">Artículo 2</a><a class="dropdown-item" href="#">Artículo 3</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div style="display: block;justify-content: center;">
-                                <div class="row">
-                                    <div class="col">
-                                        <div class="nav-item dropdown" style="text-align: left;"><a class="dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" href="#" style="font-size: 20px;">La marihuana y sus efectos adversos</a>
-                                            <div class="dropdown-menu dropdown-menu-dark shadow" style="width: 100%;float: left;text-align: center;"><a class="dropdown-item" href="#">Artículo 1</a><a class="dropdown-item" href="#">Artículo 2</a><a class="dropdown-item" href="#">Artículo 3</a></div>
                                         </div>
                                     </div>
                                 </div>
@@ -363,7 +345,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-3 col-xxl-3">
-                    <div data-aos="fade-up" style="position: sticky;top: 90px;">
+                    <div data-aos="fade-up" style="position: sticky;top: 130px;">
                         <div class="row">
                             <div class="col d-none d-xxl-block d-xl-block d-lg-block d-md-block" style="margin-bottom: 0.3rem;">
                                 <h1 style="font-size: 24px;text-align: center;margin-bottom: 1px;">Accesos rápidos</h1>
@@ -397,9 +379,8 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <div>
-                                            <h4 style="text-align: center;font-size: 20px;">Desarrollo de Proyectos</h4>
                                             <h6 class="text-muted mb-2" style="text-align: center;font-size: 14px;">Escuela de Nivel Medio Superior de Salvatierra</h6>
-                                            <p style="text-align: justify;font-size: 12px;">¿Qué se pretende conocer dentro del proyecto presente del campo y como planeamos concretarlo?</p><a href="#" style="text-align: center;display: block;"><small style="font-size: 16px;">Acerca del proyecto</small></a>
+                                            <p style="text-align: justify;font-size: 12px;">¿Qué se pretende conocer dentro del proyecto del campo y como planeamos concretarlo?</p><a href="#" style="text-align: center;display: block;"><small style="font-size: 16px;">Acerca del proyecto</small></a>
                                         </div>
                                     </div>
                                 </div>
