--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 
 <body onselectstart="return false">
     <nav class="navbar navbar-dark navbar-expand-md bg-dark py-3 sticky-top">
-        <div class="container"><a class="navbar-brand d-flex align-items-center" href="../index.html"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TAD ENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand d-flex align-items-center" href="../tad/"><span style="font-size: 16px;"><img src="https://styles.redditmedia.com/t5_33lcx6/styles/communityIcon_jxlbmlpdifn51.jpg?width=256&amp;format=pjpg&amp;v=enabled&amp;s=79bf6b77a4480fba89ec2d0f2bb17b4fa5d65da2" style="width: 80px;height: 79px;" width="80" height="79"><strong>&nbsp;</strong><span style="font-size: 20px;margin-left: 15px;vertical-align: middle;">TAD ENMSS</span></span></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item d-block d-xxl-none d-xl-none d-lg-none d-md-none" style="margin-top: 20px;">
                         <p style="color: #ffffff;font-size: 24px;text-align: left;">Accesos de la página</p>
                     </li>
-                    <li class="nav-item"><a class="nav-link active" href="../index.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Artículos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/media.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Documentos</a></li>
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/about.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Acerca de nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="../tad/" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Artículos</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/media.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Documentos</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/about.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Acerca de nosotros</a></li>
                 </ul>
                 <ul class="navbar-nav d-xxl-none d-xl-none d-lg-none d-md-none">
                     <li class="nav-item" style="margin-top: 20px;">
