--- a/pages/about.html
+++ b/pages/about.html
@@ -68,7 +68,7 @@
             </div>
         </div>
     </nav>
-    <div class="container" style="margin-top: 2rem;">
+    <div class="container" style="margin-top: 15px;">
         <div class="row">
             <div class="col">
                 <div>
@@ -113,14 +113,15 @@
     </div>
     <footer class="text-center py-4" id="footer">
         <div class="container">
+            <hr style="margin-top: -10px;">
             <div class="row row-cols-1 row-cols-lg-3">
                 <div class="col">
                     <p class="text-muted my-2">Tabaquismo, Alcoholismo y Drogadicción ENMSS</p>
                 </div>
                 <div class="col">
                     <ul class="list-inline my-2">
-                        <li class="list-inline-item"><a class="link-secondary" href="#">Escuela de Nivel Medio Superior de Salvatierra</a></li>
-                        <li class="list-inline-item"><a class="link-secondary" href="#">WIP</a></li>
+                        <li class="list-inline-item"><a class="link-secondary" href="../pages/wip.html">Escuela de Nivel Medio Superior de Salvatierra</a></li>
+                        <li class="list-inline-item"><a class="link-secondary" href="../pages/wip.html">Raxyer Technologies</a></li>
                     </ul>
                 </div>
                 <div class="col">
