--- a/pages/wip.html
+++ b/pages/wip.html
@@ -88,8 +88,8 @@
                 </div>
                 <div class="col">
                     <ul class="list-inline my-2">
-                        <li class="list-inline-item"><a class="link-secondary" href="#">Escuela de Nivel Medio Superior de Salvatierra</a></li>
-                        <li class="list-inline-item"><a class="link-secondary" href="#">WIP</a></li>
+                        <li class="list-inline-item"><a class="link-secondary" href="../pages/wip.html">Escuela de Nivel Medio Superior de Salvatierra</a></li>
+                        <li class="list-inline-item"><a class="link-secondary" href="../pages/wip.html">Raxyer Technologies</a></li>
                     </ul>
                 </div>
                 <div class="col">
