--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://d31g6oeq0bzej7.cloudfront.net/Assets/image/jpeg/bbe23ecd-7923-4b6a-ac98-c2c97416fd58.jpg" style="height: 300px;">
-                                            <div class="card-body"><a href="#">
+                                            <div class="card-body"><a href="../tad/pages/wip.html">
                                                     <h4>Ejemplo artículo 2</h4>
                                                 </a>
                                                 <p class="card-text">Descripción breve del artículo.</p>
@@ -192,7 +192,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051647/6a42533407ec279798e116b20747221f-1000.jpg">
-                                            <div class="card-body"><a href="#">
+                                            <div class="card-body"><a href="../tad/pages/wip.html">
                                                     <h4>Ejemplo artículo 3</h4>
                                                 </a>
                                                 <p class="card-text">Descripción breve del artículo.</p>
@@ -216,7 +216,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051650/d10945d34bd8862cfbf0fe4c27e165fb-1000.jpg">
-                                            <div class="card-body"><a href="#">
+                                            <div class="card-body"><a href="../tad/pages/wip.html">
                                                     <h4>Ejemplo artículo 4</h4>
                                                 </a>
                                                 <p class="card-text">Descripción breve del artículo.</p>
@@ -244,7 +244,7 @@
                                 <div class="row">
                                     <div class="col-xl-12">
                                         <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.worldhistory.org/uploads/images/11260.png">
-                                            <div class="card-body"><a href="#">
+                                            <div class="card-body"><a href="../tad/pages/wip.html">
                                                     <h4>Ejemplo artículo 5</h4>
                                                 </a>
                                                 <p class="card-text">Descripción breve del artículo.</p>
@@ -268,7 +268,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" style="height: 300px;" src="https://www.wallpaperup.com/uploads/wallpapers/2016/11/22/1051650/d10945d34bd8862cfbf0fe4c27e165fb-1000.jpg">
-                                            <div class="card-body"><a href="#">
+                                            <div class="card-body"><a href="../tad/pages/wip.html">
                                                     <h4>Ejemplo artículo 6</h4>
                                                 </a>
                                                 <p class="card-text">Descripción breve del artículo.</p>
@@ -292,7 +292,7 @@
                                 <div class="row">
                                     <div class="col">
                                         <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://d31g6oeq0bzej7.cloudfront.net/Assets/image/jpeg/bbe23ecd-7923-4b6a-ac98-c2c97416fd58.jpg" style="height: 300px;">
-                                            <div class="card-body"><a href="#">
+                                            <div class="card-body"><a href="../tad/pages/wip.html">
                                                     <h4>Ejemplo artículo 7</h4>
                                                 </a>
                                                 <p class="card-text">Descripción breve del artículo.</p>
@@ -318,7 +318,7 @@
                                         <div class="row">
                                             <div class="col">
                                                 <div class="card" data-aos="fade-up" style="height: 500px;"><img class="card-img-top w-100 d-block" src="https://saludconlupa.com/media/images/shutterstock_677417245.width-1920.jpg" style="height: 300px;">
-                                                    <div class="card-body"><a href="./articles/articletadenmss/articletadenmss.html">
+                                                    <div class="card-body"><a href="../tad/pages/wip.html">
                                                             <h4>Ejemplo artículo 8</h4>
                                                         </a>
                                                         <p class="card-text">Descripción breve del artículo.</p>
