--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                     <li class="nav-item"><a class="nav-link active" href="../tad/" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Artículos</a></li>
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/media.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Documentos</a></li>
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../tad/pages/about.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Acerca de nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../tad/pages/wip.html" style="font-size: 22px;">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../tad/pages/wip.html" style="font-size: 22px;">Contáctanos</a></li>
                 </ul>
                 <ul class="navbar-nav d-xxl-none d-xl-none d-lg-none d-md-none">
                     <li class="nav-item" style="margin-top: 20px;">
@@ -75,21 +77,21 @@
                 <div class="bg-light border rounded border-light" style="background-image: url(https://i.pinimg.com/originals/8e/61/ff/8e61ff28302b6fef1057d1b5afb52d3f.png);color: black;text-align: center;background-size: initial;background-position: center;padding-top: 150px;padding-bottom: 150px;margin-bottom: 0;">
                     <h1>Ejemplo Introductorio</h1>
                     <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    <p><a class="btn btn-light" role="button">Leer Más</a></p>
+                    <p><a class="btn btn-light" role="button" href="../tad/pages/wip.html">Leer Más</a></p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="bg-light border rounded border-light" style="background-image: url(https://i.pinimg.com/originals/8e/61/ff/8e61ff28302b6fef1057d1b5afb52d3f.png);color: black;text-align: center;background-size: initial;background-position: center;padding-top: 150px;padding-bottom: 150px;margin-bottom: 0;">
                     <h1>Ejemplo Introductorio</h1>
                     <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    <p><a class="btn btn-light" role="button">Leer Más</a></p>
+                    <p><a class="btn btn-light" role="button" href="../tad/pages/wip.html">Leer Más</a></p>
                 </div>
             </div>
             <div class="carousel-item">
                 <div class="bg-light border rounded border-light" style="background-image: url(https://i.pinimg.com/originals/8e/61/ff/8e61ff28302b6fef1057d1b5afb52d3f.png);color: black;text-align: center;background-size: initial;background-position: center;padding-top: 150px;padding-bottom: 150px;margin-bottom: 0;">
                     <h1>Ejemplo Introductorio</h1>
                     <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    <p><a class="btn btn-light" role="button">Leer Más</a></p>
+                    <p><a class="btn btn-light" role="button" href="../tad/pages/wip.html">Leer Más</a></p>
                 </div>
             </div>
         </div>
