--- a/pages/about.html
+++ b/pages/about.html
@@ -45,6 +45,8 @@
                     <li class="nav-item"><a class="nav-link active" href="../" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Artículos</a></li>
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/media.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Documentos</a></li>
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="../pages/about.html" style="font-size: 22px;color: rgba(255,255,255,0.55);text-align: left;">Acerca de nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../pages/wip.html" style="font-size: 22px;">FAQ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../pages/wip.html" style="font-size: 22px;">Contáctanos</a></li>
                 </ul>
                 <ul class="navbar-nav d-xxl-none d-xl-none d-lg-none d-md-none">
                     <li class="nav-item" style="margin-top: 20px;">
