--- a/pages/media.html
+++ b/pages/media.html
@@ -173,12 +173,12 @@
                             <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#documents .item-2" aria-expanded="false" aria-controls="documents .item-2" style="font-size: 24px;">Visualizador de documentos</button></h2>
                             <div class="accordion-collapse collapse item-2" role="tabpanel">
                                 <div class="accordion-body">
-                                    <div class="accordion" role="tablist" id="ETATE-A">
+                                    <div class="accordion accordion-flush" role="tablist" id="ETATE-A" style="margin-top: -16px;margin-left: -20px;margin-right: -20px;margin-bottom: -16px;">
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ETATE-A .etate-ac-1" aria-expanded="false" aria-controls="ETATE-A .etate-ac-1" style="font-size: 18px;background: #f7f2ff;">Febrero</button></h2>
                                             <div class="accordion-collapse collapse etate-ac-1" role="tabpanel" data-bs-parent="#ETATE-A">
                                                 <div class="accordion-body">
-                                                    <div>
+                                                    <div style="margin-top: -18px;margin-left: -21px;margin-right: -21px;margin-bottom: -18px;">
                                                         <ul class="nav nav-tabs" role="tablist" style="background: #f1fff0;">
                                                             <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#Art-1" style="font-size: 16px;">Artículo 1</a></li>
                                                             <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#Art-2" style="font-size: 16px;">Artículo 2</a></li>
@@ -205,7 +205,7 @@
                                             <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ETATE-A .etate-ac-2" aria-expanded="false" aria-controls="ETATE-A .etate-ac-2" style="font-size: 18px;background: #f7f2ff;">Marzo</button></h2>
                                             <div class="accordion-collapse collapse etate-ac-2" role="tabpanel" data-bs-parent="#ETATE-A">
                                                 <div class="accordion-body">
-                                                    <div>
+                                                    <div style="margin-top: -18px;margin-left: -21px;margin-right: -21px;margin-bottom: -18px;">
                                                         <ul class="nav nav-tabs" role="tablist" style="background: #f1fff0;">
                                                             <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#Art-1-2" style="font-size: 16px;">Artículo 1</a></li>
                                                             <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#Art-2-2" style="font-size: 16px;">Artículo 2</a></li>
@@ -232,7 +232,7 @@
                                             <h2 class="accordion-header" role="tab"><button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ETATE-A .etate-ac-3" aria-expanded="false" aria-controls="ETATE-A .etate-ac-3" style="font-size: 18px;background: #f7f2ff;">Abril</button></h2>
                                             <div class="accordion-collapse collapse etate-ac-3" role="tabpanel" data-bs-parent="#ETATE-A">
                                                 <div class="accordion-body">
-                                                    <div>
+                                                    <div style="margin-top: -18px;margin-left: -21px;margin-right: -21px;margin-bottom: -18px;">
                                                         <ul class="nav nav-tabs" role="tablist" style="background: #f1fff0;">
                                                             <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#Art-1-3" style="font-size: 16px;">Artículo 1</a></li>
                                                             <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#Art-2-3" style="font-size: 16px;">Artículo 2</a></li>
